[tool.poetry]
name = "hypermark_protocol"
version = "0.1.0"
description = ""
authors = ["Mike Anderson <manderson@leapfrogonline.com>"]

[tool.poetry.dependencies]
python = "^3.8"
marko = "^1.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
